--- a/README.html
+++ b/README.html
@@ -1,31 +1,17 @@
-#**Hacker-Bug-Hunter** is a ✨_special_✨ repository based on GitHub `README.md`
-<br>
-[![Stats](https://github-readme-stats.vercel.app/api?username=Hacker-Bug-Hunter&bg_color=45,07112e,000&border_color=80ff00&text_color=fff&icon_color=0ef&ring_color=f0a&height=500&show=prs_merged,reviews,prs_merged&rank_icon=github&border_radius=20&hide_title=true&show_icons=true&hide=contribs)](https://github.com/Hacker-Bug-Hunter#gh-dark-mode-only)
-[![Stats](https://github-readme-stats.vercel.app/api?username=Hacker-Bug-Hunter&bg_color=50,0ef,fff,fff&hide_border=true&text_color=000&icon_color=000&ring_color=0ac&height=500&show=prs_merged,reviews,prs_merged&rank_icon=github&border_radius=20&hide_title=true&show_icons=true&hide=contribs)](https://github.com/Hacker-Bug-Hunter#gh-light-mode-only)
-[![Stats](https://github-readme-stats.vercel.app/api?username=Hacker-Bug-Hunter&show_icons=true&theme=holi&show=prs_merged,reviews,prs_merged&rank_icon=github&border_radius=20&hide_title=true&show_icons=true&hide=contribs#gh-dark-mode-only)]
-
-
-<div width='100%' display='flex'>
-<a href="https://github.com/Hacker-Bug-Hunter/github-readme-stats">
-<img align="center" src="https://github-readme-stats.vercel.app/api?username=Hacker-Bug-Hunter&show_icons=true&include_all_commits=true&theme=gotham" alt="Hacker-Bug-Hunter's github stats" /></a>
-<a href="https://github.com/Hacker-Bug-Hunter/github-readme-stats">
-<img heigth= "100%"align="center" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Hacker-Bug-Hunter&include_all_commits=true&layout=compact&theme=gotham"/></a>
-  <!--midnight-purple-->
-  <!--gotham-->
-</div>
-- 🔭 Atualmente trabalho como Freelancer em Python
-- 🌱 Atualmente estou aprimorando minhas habilidades em Python e aprendendo Django
-<picture>
-  <source
-    media="(prefers-color-scheme: dark)"
-    srcset="https://raw.githubusercontent.com/Hacker-Bug-Hunter/Hacker-Bug-Hunter/output/github-contribution-grid-snake-dark.svg"
-  />
-  <source
-    media="(prefers-color-scheme: light)"
-    srcset="https://raw.githubusercontent.com/Hacker-Bug-Hunter/Hacker-Bug-Hunter/output/github-contribution-grid-snake.svg"
-  />
-  <img
-    alt="github contribution grid snake animation"
-    src="https://raw.githubusercontent.com/Hacker-Bug-Hunter/output/github-contribution-grid-snake.svg"
-  />
-</picture>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <picture>
+        <source srcset="https://github-readme-stats.vercel.app/api?username=Hacker-Bug-Hunter&bg_color=45,07112e,000&border_color=80ff00&text_color=fff&icon_color=0ef&ring_color=f0a&card_heigth=700&show=prs_mergedreviews,prs_merged&rank_icon=github&border_radius=20&hide_title=true&show_icons=true&hide=contribs"
+        media="(prefers-color-scheme: dark)" />
+        <source srcset="https://github-readme-stats.vercel.app/api?username=Hacker-Bug-Hunter&bg_color=50,0ef,fff,fff&hide_border=true&text_color=000&icon_color=000&ring_color=0ac&heigth=500&show=prs_mergedreviews,prs_merged&rank_icon=github&border_radius=20&hide_title=true&show_icons=true&hide=contribs"
+        media="(prefers-color-scheme: light)" />
+        <img src="https://github-readme-stats.vercel.app/api?username=Hacker-Bug-Hunter&show_icons=true&theme=holi&heigth=500&show=prs_mergedreviews,prs_merged&rank_icon=github&border_radius=20&hide_title=true&show_icons=true&hide=contribs" />
+      </picture>
+</body>
+</html>
